--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 This package is intended for generation the configuration for ORM frameworks based on annotations on the Model classes.
-Now supports only the Outlet ORM, later plan on supporting Doctrine.
+Now supports only the Outlet ORM, later plan on supporting other frameworks and custom cache tools.
 As annotation parsing may be an performance issue on production enviroment, it's recommended to use the orm cache tools.
